--- a/pratica/05-crud-express/package.json
+++ b/pratica/05-crud-express/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "exercicio02-calculadoraexpress",
+  "name": "05-crud-express",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
